--- a/tierpsy/gui/QtDesignerFiles/Summarizer.ui
+++ b/tierpsy/gui/QtDesignerFiles/Summarizer.ui
@@ -27,8 +27,18 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="p_feature_type"/>
+      <item row="2" column="1">
+       <widget class="QComboBox" name="p_summary_type"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Features Type</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
       </item>
       <item row="0" column="1" colspan="2">
        <widget class="QLineEdit" name="p_root_dir"/>
@@ -41,15 +51,8 @@ edited trajectories?</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Features Type</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="p_feature_type"/>
       </item>
       <item row="0" column="0">
        <widget class="QPushButton" name="pushButton_rootdir">
@@ -64,31 +67,28 @@ edited trajectories?</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QComboBox" name="p_summary_type"/>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="p_n_parallel">
+        <property name="toolTip">
+         <string extracomment="Number of files to process in parallel. Limited by the available system resources. Any value &lt;= 1 disables multiprocessing"/>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_20">
+        <property name="text">
+         <string>Number of Processes</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QWidget" name="FoldArgs" native="true">
       <layout class="QGridLayout" name="gridLayout">
-       <item row="1" column="1">
-        <widget class="QLabel" name="label_2">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>Fraction of trajectories
- to sample</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignBottom|Qt::AlignHCenter</set>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="1">
         <widget class="QDoubleSpinBox" name="p_frac_worms_to_keep">
          <property name="maximum">
@@ -96,16 +96,6 @@ edited trajectories?</string>
          </property>
          <property name="singleStep">
           <double>0.010000000000000</double>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QSpinBox" name="p_n_folds"/>
-       </item>
-       <item row="0" column="2">
-        <widget class="QDoubleSpinBox" name="p_time_sample_seconds">
-         <property name="maximum">
-          <double>100000000000.000000000000000</double>
          </property>
         </widget>
        </item>
@@ -141,6 +131,33 @@ edited trajectories?</string>
           <set>Qt::AlignBottom|Qt::AlignHCenter</set>
          </property>
         </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QDoubleSpinBox" name="p_time_sample_seconds">
+         <property name="maximum">
+          <double>100000000000.000000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLabel" name="label_2">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Fraction of trajectories
+ to sample</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QSpinBox" name="p_n_folds"/>
        </item>
       </layout>
      </widget>
